--- a/references.bib
+++ b/references.bib
@@ -1087,6 +1087,14 @@
   url		= {https://community.amstat.org/jointscsg-section/media/videos}
 }
 
+@misc{krantz1971,
+	author = {Krantz, David and Luce, Duncan and Suppes, Patrick and Tversky, Amos},
+	title = {{Foundations of Measurement, Vol. I: Additive and Polynomial Representations}},
+	year = {1971},
+	note = {[Online; accessed 26. Nov. 2024]},
+	url = {https://philpapers.org/rec/KRAFOM}
+}
+
 @Article{	  krzywinski2013,
   author	= {Krzywinski, Martin},
   title		= {Axes, ticks and grids},
@@ -2591,4 +2599,87 @@
 	month = feb,
 	note = {[Online; accessed 24. Nov. 2024]},
 	url = {https://developer.ibm.com/articles/pa-dalign}
+}
+
+@article{hand1996,
+  title={Statistics and the theory of measurement},
+  author={Hand, David J},
+  journal={Journal of the Royal Statistical Society: Series A (Statistics in Society)},
+  volume={159},
+  number={3},
+  pages={445--473},
+  year={1996},
+  publisher={Wiley Online Library}
+}
+
+@article{humphry2013,
+  title={Understanding measurement in light of its origins},
+  author={Humphry, Stephen},
+  journal={Frontiers in psychology},
+  volume={4},
+  pages={113},
+  year={2013},
+  publisher={Frontiers Media SA}
+}
+
+@article{luce1959,
+  title={On the possible psychophysical laws.},
+  author={Luce, R Duncan},
+  journal={Psychological review},
+  volume={66},
+  number={2},
+  pages={81},
+  year={1959},
+  publisher={American Psychological Association}
+}
+
+@article{stevens1951,
+  title={Mathematics, measurement, and psychophysics.},
+  author={Stevens, Stanley Smith},
+  year={1951},
+  publisher={Wiley}
+}
+
+@article{lord1953,
+  title={On the statistical treatment of football numbers.},
+  author={Lord, Frederic M},
+  year={1953},
+  publisher={American Psychological Association}
+}
+
+@article{tukey1986,
+  title={Data analysis and behavioral science or learning to bear the quantitative man's burden by shunning badmandments},
+  author={Tukey, John W},
+  journal={The collected works of John W. Tukey},
+  volume={3},
+  pages={391--484},
+  year={1986},
+  publisher={Wadsworth}
+}
+
+@article{michell2021,
+  title={Representational measurement theory: Is its number up?},
+  author={Michell, Joel},
+  journal={Theory \& Psychology},
+  volume={31},
+  number={1},
+  pages={3--23},
+  year={2021},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{tal2025,
+  title={Models and measurement},
+  author={Tal, Eran},
+  journal={The Routledge Handbook of Philosophy of Scientific Modeling},
+  pages={256--269},
+  year={2025},
+  publisher={Routledge}
+}
+
+@book{krantz1971,
+  title = {Foundations of Measurement Volume 1: Additive and Polynomial Representations},
+  author = {Krantz, David H and Suppes, Patrick and Luce, Duncan R and Tversky, Amos},
+  year = {1971},
+  publisher = {New York: Academic Press}
 }
