--- a/references.bib
+++ b/references.bib
@@ -2316,11 +2316,20 @@
 
 @Book{		  wickham2016,
   author	= {Hadley Wickham},
-  title		= {ggplot2: Elegant Graphics for Data Analysis},
+  title		= {ggplot2: Elegant Graphics for Data Analysis (2e)},
   publisher	= {Springer-Verlag New York},
   year		= {2016},
   isbn		= {978-3-319-24277-4},
   url		= {https://ggplot2.tidyverse.org}
+}
+
+@Book{wickham2024,
+	author = {Hadley Wickham, Danielle Navarro},
+	title = {ggplot2: Elegant Graphics for Data Analysis (3e)},
+	year = {2024},
+	month = nov,
+	note = {[Online; accessed 27. Nov. 2024]},
+	url = {https://ggplot2-book.org}
 }
 
 @Book{		  wickham2019,
@@ -2682,4 +2691,74 @@
   author = {Krantz, David H and Suppes, Patrick and Luce, Duncan R and Tversky, Amos},
   year = {1971},
   publisher = {New York: Academic Press}
+}
+
+@article{mackinlay1986,
+  title={Automating the design of graphical presentations of relational information},
+  author={Mackinlay, Jock},
+  journal={Acm Transactions On Graphics (Tog)},
+  volume={5},
+  number={2},
+  pages={110--141},
+  year={1986},
+  publisher={Acm New York, NY, USA}
+}
+
+@article{saket2017,
+  title={Evaluating interactive graphical encodings for data visualization},
+  author={Saket, Bahador and Srinivasan, Arjun and Ragan, Eric D and Endert, Alex},
+  journal={IEEE transactions on visualization and computer graphics},
+  volume={24},
+  number={3},
+  pages={1316--1330},
+  year={2017},
+  publisher={IEEE}
+}
+
+@article{talbot2014,
+  title={Four experiments on the perception of bar charts},
+  author={Talbot, Justin and Setlur, Vidya and Anand, Anushka},
+  journal={IEEE transactions on visualization and computer graphics},
+  volume={20},
+  number={12},
+  pages={2152--2160},
+  year={2014},
+  publisher={IEEE}
+}
+
+@inproceedings{reda2018,
+  title={Graphical perception of continuous quantitative maps: the effects of spatial frequency and colormap design},
+  author={Reda, Khairi and Nalawade, Pratik and Ansah-Koi, Kate},
+  booktitle={Proceedings of the 2018 CHI Conference on Human Factors in Computing Systems},
+  pages={1--12},
+  year={2018}
+}
+
+@article{demiralp2014,
+  title={Learning perceptual kernels for visualization design},
+  author={Demiralp, {\c{C}}a{\u{g}}atay and Bernstein, Michael S and Heer, Jeffrey},
+  journal={IEEE transactions on visualization and computer graphics},
+  volume={20},
+  number={12},
+  pages={1933--1942},
+  year={2014},
+  publisher={IEEE}
+}
+
+@misc{olympics2024a,
+	title = {{Men's Boulder {\&} Lead, Semifinal Lead - Sport Climbing {$\vert$} Paris 2024 Olympics}},
+	author = {{International Olympic Committee}},
+	year = {2024},
+	month = nov,
+	note = {[Online; accessed 28. Nov. 2024]},
+	url = {https://olympics.com/en/paris-2024/results/sport-climbing/men-s-boulder-and-lead/sfnl000200--}
+}
+
+@misc{olympics2024b,
+	title = {{Women's Boulder {\&} Lead, Semifinal Lead - Sport Climbing {$\vert$} Paris 2024 Olympics}},
+	author = {{International Olympic Committee}},
+	year = {2024},
+	month = nov,
+	note = {[Online; accessed 28. Nov. 2024]},
+	url = {https://olympics.com/en/paris-2024/results/sport-climbing/women-s-boulder-and-lead/sfnl000200--}
 }
